--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 app:
     container_name: xsolla-test
     build: "./docker"
@@ -8,3 +7,6 @@ app:
     ports:
       - "80:80"
     working_dir: "/data"
+    environment:
+        - DEV_UID
+        - DEV_GID
