--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "name": "xsolla-test",
   "require": {
-    "silex/silex":"~2.0"
+    "silex/silex":"~2.0",
+    "dflydev/doctrine-orm-service-provider":"~2.0.1"
   },
   "autoload": {
     "psr-4": {
