--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,15 @@
   "name": "xsolla-test",
   "require": {
     "silex/silex":"~2.0",
-    "dflydev/doctrine-orm-service-provider":"~2.0.1"
+    "dflydev/doctrine-orm-service-provider":"~2.0.1",
+    "doctrine/dbal": "~2.2"
   },
   "autoload": {
     "psr-4": {
       "App\\": "src/App"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.7"
   }
 }
