--- a/docker/vhost.conf
+++ b/docker/vhost.conf
@@ -4,6 +4,10 @@
 
     DocumentRoot /data/app
     <Directory />
+        Options FollowSymLinks
+        AllowOverride None
+    </Directory>
+    <Directory /data/app>
         Options Indexes SymLinksIfOwnerMatch ExecCGI Includes
         AllowOverride All
         Require all granted
