--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "xsolla-test",
   "require": {
     "silex/silex":"~2.0",
-    "doctrine/dbal": "~2.4"
+    "doctrine/dbal": "~2.4",
+    "ramsey/uuid": "^3.5"
   },
   "autoload": {
     "psr-4": {
