--- a/docker/vhost.conf
+++ b/docker/vhost.conf
@@ -2,12 +2,12 @@
     ServerName localhost
     ServerAdmin webmaster@localhost
 
-    DocumentRoot /data/app
+    DocumentRoot /data/web
     <Directory />
         Options FollowSymLinks
         AllowOverride None
     </Directory>
-    <Directory /data/app>
+    <Directory /data/web>
         Options Indexes SymLinksIfOwnerMatch ExecCGI Includes
         AllowOverride All
         Require all granted
