--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^5.7",
+    "symfony/browser-kit": "^3.2"
   }
 }
