upd: post limit

--- a/docker/php.ini
+++ b/docker/php.ini
@@ -1,7 +1,6 @@
 display_errors = 1
 short_open_tag = 1
 memory_limit = 512M
-upload_max_filesize = 100M
 max_file_uploads = 20
 mbstring.func_overload = 2
 mbstring.internal_encoding = UTF-8
@@ -12,3 +11,5 @@ realpath_cache_size = 4096K
 max_execution_time = 120
 date.timezone = Asia/Yekaterinburg
 session.gc_maxlifetime = 7776000
+post_max_size = 500M
+upload_max_filesize = 500M
